[gd_scene load_steps=29 format=2]

[ext_resource path="res://Boss.gd" type="Script" id=1]
[ext_resource path="res://Objects/images/fumaca.png" type="Texture" id=2]
[ext_resource path="res://Objects/EnemySpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Enemies/Boss/BossHand.png" type="Texture" id=4]
[ext_resource path="res://Objects/Enemies/Boss/bosshead.png" type="Texture" id=5]
[ext_resource path="res://Objects/Fireball.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 375, 8.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 138, 5 )

[sub_resource type="Gradient" id=25]
colors = PoolColorArray( 0.771973, 0, 0, 1, 0.135254, 0.0443802, 0.135165, 1 )

[sub_resource type="GradientTexture" id=26]
gradient = SubResource( 25 )
width = 8

[sub_resource type="Curve" id=27]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.488636 ), -1.61818, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=28]
width = 32
curve = SubResource( 27 )

[sub_resource type="ParticlesMaterial" id=29]
emission_shape = 2
emission_box_extents = Vector3( 38, 4, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 28 )
color_ramp = SubResource( 26 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "Cast",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": false,
"name": "SpawnL",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": false,
"name": "SpawnR",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": false,
"name": "Swipe",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 25.334, 29.3333 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 29.3326, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31, 31 )

[sub_resource type="Animation" id=20]
resource_name = "SwipeL"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BossBody/BossHead/BossLHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, -2, 1, 1 ),
"update": 0,
"values": [ Vector2( -68.6667, 42 ), Vector2( -110, 90 ), Vector2( 110, 90 ), Vector2( -68.667, 42 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BossBody/BossHead/BossLHand:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Idle", "Swipe", "Idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BossBody/BossHead/BossLHand:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.65 ),
"transitions": PoolRealArray( 1, 1, 0.0253829 ),
"update": 2,
"values": [ 0.0, 90.0, 0.0 ]
}

[sub_resource type="Animation" id=21]
resource_name = "SwipeR"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("BossBody/BossHead/BossRHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, -2, 1, 1 ),
"update": 0,
"values": [ Vector2( 68.6667, 42 ), Vector2( 110, 90 ), Vector2( -110, 90 ), Vector2( 68.667, 42 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BossBody/BossHead/BossRHand:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Idle", "Swipe", "Idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BossBody/BossHead/BossRHand:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 2,
"values": [ 0.0, -90.0, 0.0 ]
}

[node name="Boss" type="Node2D"]
script = ExtResource( 1 )
Bullet = ExtResource( 6 )

[node name="StartFightArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartFightArea"]
shape = SubResource( 2 )

[node name="ExitBlockers" type="Node2D" parent="."]

[node name="RigidBody2D" type="RigidBody2D" parent="ExitBlockers"]
position = Vector2( 0, 115 )
collision_mask = 3
mode = 1
contacts_reported = 495
contact_monitor = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitBlockers/RigidBody2D"]
shape = SubResource( 3 )
disabled = true

[node name="Sprite" type="Particles2D" parent="ExitBlockers/RigidBody2D"]
visible = false
position = Vector2( 10, 0 )
amount = 75
process_material = SubResource( 29 )
texture = ExtResource( 2 )

[node name="BossBody" type="Node2D" parent="."]

[node name="BossHead" type="Sprite" parent="BossBody"]
position = Vector2( 0, -33 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="BossLHand" type="AnimatedSprite" parent="BossBody/BossHead"]
position = Vector2( -68.667, 42 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 14 )
animation = "Idle"
frame = 2
playing = true

[node name="BossHandArea" type="Area2D" parent="BossBody/BossHead/BossLHand"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossBody/BossHead/BossLHand/BossHandArea"]
shape = SubResource( 23 )

[node name="BossRHand" type="AnimatedSprite" parent="BossBody/BossHead"]
position = Vector2( 68.6667, 42 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 14 )
animation = "Idle"
playing = true
flip_h = true

[node name="BossHandArea" type="Area2D" parent="BossBody/BossHead/BossRHand"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossBody/BossHead/BossRHand/BossHandArea"]
position = Vector2( 1.52588e-05, -4.66666 )
shape = SubResource( 24 )

[node name="ShootingPoint" type="Node2D" parent="BossBody"]
position = Vector2( 0, -57 )
rotation = 1.5708

[node name="Position2D" type="Position2D" parent="BossBody/ShootingPoint"]
position = Vector2( 40, 0 )

[node name="DamageArea" type="Area2D" parent="BossBody" groups=["Boss", "DashTarget"]]
position = Vector2( 0, -57 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossBody/DamageArea"]
shape = SubResource( 4 )

[node name="EnemySpawner" parent="BossBody" instance=ExtResource( 3 )]
position = Vector2( -1, -1 )
isBoss = true

[node name="EnemyArea" parent="BossBody/EnemySpawner/EnemyAreas" index="0"]
position = Vector2( -66, -24 )

[node name="EnemyArea2" parent="BossBody/EnemySpawner/EnemyAreas" index="1"]
position = Vector2( 72, 22 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SwipeL = SubResource( 20 )
anims/SwipeR = SubResource( 21 )

[connection signal="body_entered" from="StartFightArea" to="." method="_on_StartFightArea_body_entered"]
[connection signal="animation_finished" from="BossBody/BossHead/BossLHand" to="." method="_on_BossLHand_animation_finished"]
[connection signal="body_entered" from="BossBody/BossHead/BossLHand/BossHandArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="BossBody/BossHead/BossLHand/BossHandArea" to="." method="_on_DamageArea_body_exited"]
[connection signal="animation_finished" from="BossBody/BossHead/BossRHand" to="." method="_on_BossRHand_animation_finished"]
[connection signal="body_entered" from="BossBody/BossHead/BossRHand/BossHandArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="BossBody/BossHead/BossRHand/BossHandArea" to="." method="_on_DamageArea_body_exited"]
[connection signal="body_entered" from="BossBody/DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="BossBody/DamageArea" to="." method="_on_DamageArea_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="BossBody/EnemySpawner"]
